--- a/woc/src/components/Header/header.css
+++ b/woc/src/components/Header/header.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500&display=swap');
 .header{
     width: 100%;
     height: 80px;
@@ -8,6 +9,7 @@
     font-size: 12px;
     margin-left: 5px;
     margin-top: 4px;
+    font-family: 'Plus Jakarta Sans', sans-serif;
 }
 .logo{
     display: flex;
@@ -21,11 +23,13 @@
     column-gap: 1.3rem;
 }
 .nav_item a {
-    font-weight: 500;
-    font-size: 1.1rem;
+    font-weight: 400;
+    font-size: 16px;
     color:#0a2b1e ;
     text-decoration: none;
+    line-height: 16px;
     transition: 0.3s;
+    font-family: 'Plus Jakarta Sans', sans-serif;
 }
 
 .nav_item a:hover{
