--- a/woc/src/components/Companies/company.css
+++ b/woc/src/components/Companies/company.css
@@ -4,6 +4,7 @@
     font-weight: 700;
     line-height: 54px;
     color: #1c1c1c;
+    margin-top: 100px;
 }
 .colab2{
     text-align: center;
@@ -12,7 +13,23 @@
     line-height: 20.16px;
    color: #9F9F9F;
 }
-.ompanyContainer{
+.companyContainer{
     background: #F5F8FE;
+    width: 100%;
     
+}
+
+.uniRow{
+    margin-top: 50px;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 100px;
+    
+    
+}
+.cmpnyRow{
+    margin-top: 50px;
+    align-items: center;
+    justify-content: center;
+    color: #9F9F9F;
 }
