--- a/woc/src/components/Center-Section/centersection.css
+++ b/woc/src/components/Center-Section/centersection.css
@@ -1,31 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500&display=swap');
-
-
-.illus-1{
+body{
+    font-family: 'Plus Jakarta Sans', sans-serif;    
+}
+.center-text{
+    margin-left: 100px;
+   
+}
+.center-img{
+    margin-right: 250px;
     height: 670.95px;
     width: 530.42px;
+    
 }
-.see_plans{
-    outline: none;
-}
-.center-content h2{
+.center-text h2{
     font-family: 'Plus Jakarta Sans', sans-serif;
     font-weight: 700;
-    font-size: 64px;
-    line-height: 72px;
-
+    font-size: 4em;
+    line-height: 74px;
 }
-.center-content p{
+.center-text p{
     font-family: 'Plus Jakarta Sans', sans-serif;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 1.1em;
     line-height: 32px;
-    color:#1C1C1C
+    color:#1C1C1C;
+    margin-top: 30px;
+    margin-bottom: 40px;
 }
 .join{
     background-color:#1B1AFF ;
     font-family:'Plus Jakarta Sans', sans-serif;
-    display: flex;
     flex-direction: row;
     align-items: flex-start;
     padding: 20px 48px;
@@ -53,14 +56,80 @@
     border-bottom-width: 3.1px;
     width:fit-content;
     border-radius: 0;
-   
+    margin-left: 30px;
+    outline: none;
+    margin-bottom: 10px;
 }
-@media only screen and (min-width:991px){
-    .see-plans{
-        position: absolute;
+/*
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500&display=swap');
 
-    }
-    .join{
-        position: absolute;
-    }
+
+.illus-1{
+    height: 670.95px;
+    width: 530.42px;
 }
+.see_plans{
+    outline: none;
+}
+.center-content h2{
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-weight: 700;
+    font-size: 4em;
+    line-height: 74px;
+
+}
+.center-content p{
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-weight: 400;
+    font-size: 1.1px;
+    line-height: 32px;
+    color:#1C1C1C
+}
+.join{
+    background-color:#1B1AFF ;
+    font-family:'Plus Jakarta Sans', sans-serif;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 20px 48px;
+    gap: 10px;
+    width: 202px;
+    height: 64px;
+    left: 120px;
+    top: 500px;
+    border-radius: 8px;
+}
+.see-plans{
+    
+    width: 140px;   
+    height: 23px;
+    left: 370px;
+    top: 510px;
+    font-family: 'Plus Jakarta Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 23px;
+    color: #1C1C1C;
+    padding-bottom: 30px;
+    border-bottom: solid;
+    border-bottom-width: 3.1px;
+    width:fit-content;
+    border-radius: 0;
+    margin-left: 30px;
+    outline: none;
+}
+.join,.see-plans{
+    display: inline-block;
+}
+@media screen and (max-width:497px) {
+    .center-content h2{
+        text-align: center;
+    }
+    .center-content{
+        justify-content: center;
+    }
+    .illus-1{
+        height: 400px;
+        width: 300px;
+    }
+}*/
