--- a/woc/src/components/Companies/company.css
+++ b/woc/src/components/Companies/company.css
@@ -1,35 +1,81 @@
-.colab{
-    text-align: center;
-    font-size: 48px;
-    font-weight: 700;
-    line-height: 54px;
-    color: #1c1c1c;
-    margin-top: 100px;
+body{
+    font-family: 'Plus Jakarta Sans', sans-serif;    
 }
-.colab2{
+.second-container{
+    display: grid; 
+    grid-auto-columns: 2fr 2fr; 
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr; 
+    grid-template-rows: 1fr 1fr; 
+    gap: 0px 0px; 
+    grid-template-areas: 
+      ". . . . ."
+      ". . . . ."; 
+    justify-content: space-between; 
+    justify-items: stretch; 
+    width: 100%; 
+    height: 100%; 
+    
+}
+.second-container img{
+    height: 75px;
+    width: 120px;
+    padding-bottom: 50px;
+    
+}
+.second-container{
+    margin-top: 70px;
+    margin-bottom: 100px;
+    padding-left: 70px;
+    padding-bottom: 80px;
+}
+.partner-text h1{
+    text-align: center;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 54px;
+}
+.partner-text p{
     text-align: center;
     font-weight: 500;
     font-size: 16px;
     line-height: 20.16px;
-   color: #9F9F9F;
-}
-.companyContainer{
-    background: #F5F8FE;
-    width: 100%;
-    
-}
-
-.uniRow{
-    margin-top: 50px;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 100px;
-    
-    
-}
-.cmpnyRow{
-    margin-top: 50px;
-    align-items: center;
-    justify-content: center;
     color: #9F9F9F;
+}
+.partner-container{
+    background:  #F5F8FE;
+    width:100%;
+    margin-top: 50px;
+    padding-top: 70px;
+    grid-template-areas: 
+        "col1"
+        "col2"
+        "col3"
+        "col4"
+        "col5"
+        "col6"
+        "col7"
+        "col8"
+        "col9"
+        "col10"
+}
+@media (max-width:991px){
+    .second-container{
+        grid-template-columns: 20% auto;
+        grid-template-areas: "col1"
+        "col2"
+        "col3"
+        "col4"
+        "col5"
+        "col6"
+        "col7"
+        "col8"
+        "col9"
+        "col10" ;
+    }
+    .second-container{
+        padding-right: 50px;
+    }
+    .partner-container{
+        width:170%;
+    }
 }
