--- a/woc/src/components/Header/header.css
+++ b/woc/src/components/Header/header.css
@@ -3,6 +3,7 @@
     width: 100%;
     height: 80px;
     line-height: 80px;
+    
 }
 .logo h2{
     font-weight: 1000;
@@ -10,10 +11,12 @@
     margin-left: 5px;
     margin-top: 4px;
     font-family: 'Plus Jakarta Sans', sans-serif;
+    
 }
 .logo{
     display: flex;
     align-items: center;
+    
 }
 .nav_list{
     margin : 0;
@@ -30,10 +33,12 @@
     line-height: 16px;
     transition: 0.3s;
     font-family: 'Plus Jakarta Sans', sans-serif;
+    padding-right: 20px;
 }
 
 .nav_item a:hover{
     color: #17bf9e;
+    
 }
 .mobile_menu span i{
     font-size: 1.4rem;
@@ -44,6 +49,8 @@
 }
 .login {
     margin-right: 10px;
+    margin-left: 300px;
+
 }
 .signup{
     margin-left: 10px;
@@ -62,7 +69,7 @@
 
     .nav_list{
         position: absolute;
-        background: #fff;
+        
         top: 0;
         right: 0;
         width: 20%;
@@ -77,6 +84,8 @@
 
     .mobile_menu{
        display: block;
+       
+       
 
     }
     .active_menu{
@@ -103,5 +112,8 @@
         margin-top: 10px;
         margin-right: 10px;
         
+    }
+    .mobile_menu{
+        margin-right: -70%;;
     }
 }
