--- a/woc/src/components/Commitment/commit.css
+++ b/woc/src/components/Commitment/commit.css
@@ -1,19 +1,19 @@
-/*body{
+body{
     font-family: 'Plus Jakarta Sans', sans-serif;    
 }
-.img,.text{
+.commit-img,.commit-text{
     display: inline-block;
     justify-content: space-around;
     vertical-align: middle;
     
 }
-.img{
+.commit-img{
     width: 500.6px;
     height: 50%;
     vertical-align: middle;
     margin-left: 50px;   
     
-}*/
+}
 .commit-btn{
     background-color:#1B1AFF ;
     padding: 20px 48px;
@@ -23,8 +23,9 @@
     border-radius: 8px;
     color: #ffff;
     margin-left: 250px;
+    border: none;
 }
-.text h1{
+.commit-text h1{
    font-weight: 700;
    font-size:48px ;
     margin-left: 250px;
@@ -32,7 +33,7 @@
     padding-bottom: 25px;
    
 }
-.text p{
+.commit-text p{
     font-size: 18px;
     font-weight: 400;
     line-height: height 32px;
@@ -40,7 +41,7 @@
     padding-bottom:25px ;
 }
 @media (max-width:991px){
-    .text{
+    .commit-text{
         text-align: start;
         margin-left: -40%;
     }
