--- a/woc/src/components/Companies/company.css
+++ b/woc/src/components/Companies/company.css
@@ -44,8 +44,8 @@ body{
 .partner-container{
     background:  #F5F8FE;
     width:100%;
-    margin-top: 50px;
-    padding-top: 70px;
+    margin:auto;
+    padding-top: 60px;
     grid-template-areas: 
         "col1"
         "col2"
@@ -76,6 +76,6 @@ body{
         padding-right: 50px;
     }
     .partner-container{
-        width:170%;
+        width:1800%;
     }
 }
